Remove full and simple core

--- a/src/cpu/Makefile.in
+++ b/src/cpu/Makefile.in
@@ -78,7 +78,6 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@EMSCRIPTEN_FALSE@am__append_1 = core_full.cpp core_simple.cpp
 subdir = src/cpu
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/depcomp
@@ -100,19 +99,11 @@ am__v_AR_0 = @echo "  AR      " $@;
 am__v_AR_1 = 
 libcpu_a_AR = $(AR) $(ARFLAGS)
 libcpu_a_LIBADD =
-am__libcpu_a_SOURCES_DIST = callback.cpp cpu.cpp flags.cpp modrm.cpp \
-	modrm.h instructions.h paging.cpp lazyflags.h core_normal.cpp \
-	core_normal_8086.cpp core_normal_286.cpp core_prefetch.cpp \
-	mmx.cpp core_prefetch_286.cpp core_prefetch_8086.cpp \
-	core_full.cpp core_simple.cpp
-@EMSCRIPTEN_FALSE@am__objects_1 = core_full.$(OBJEXT) \
-@EMSCRIPTEN_FALSE@	core_simple.$(OBJEXT)
 am_libcpu_a_OBJECTS = callback.$(OBJEXT) cpu.$(OBJEXT) flags.$(OBJEXT) \
 	modrm.$(OBJEXT) paging.$(OBJEXT) core_normal.$(OBJEXT) \
 	core_normal_8086.$(OBJEXT) core_normal_286.$(OBJEXT) \
 	core_prefetch.$(OBJEXT) mmx.$(OBJEXT) \
-	core_prefetch_286.$(OBJEXT) core_prefetch_8086.$(OBJEXT) \
-	$(am__objects_1)
+	core_prefetch_286.$(OBJEXT) core_prefetch_8086.$(OBJEXT)
 libcpu_a_OBJECTS = $(am_libcpu_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -156,7 +147,7 @@ am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
 SOURCES = $(libcpu_a_SOURCES)
-DIST_SOURCES = $(am__libcpu_a_SOURCES_DIST)
+DIST_SOURCES = $(libcpu_a_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive cscopelist-recursive \
 	ctags-recursive dvi-recursive html-recursive info-recursive \
 	install-data-recursive install-dvi-recursive \
@@ -339,14 +330,13 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = core_full core_normal
+SUBDIRS = core_normal
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
 noinst_LIBRARIES = libcpu.a
-libcpu_a_SOURCES = callback.cpp cpu.cpp flags.cpp modrm.cpp modrm.h \
-	instructions.h paging.cpp lazyflags.h core_normal.cpp \
-	core_normal_8086.cpp core_normal_286.cpp core_prefetch.cpp \
-	mmx.cpp core_prefetch_286.cpp core_prefetch_8086.cpp \
-	$(am__append_1)
+libcpu_a_SOURCES = callback.cpp cpu.cpp flags.cpp modrm.cpp modrm.h instructions.h	\
+		   paging.cpp lazyflags.h core_normal.cpp core_normal_8086.cpp core_normal_286.cpp core_prefetch.cpp \
+		   mmx.cpp core_prefetch_286.cpp core_prefetch_8086.cpp
+
 all: all-recursive
 
 .SUFFIXES:
@@ -397,14 +387,12 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/callback.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_full.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_normal.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_normal_286.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_normal_8086.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_prefetch.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_prefetch_286.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_prefetch_8086.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core_simple.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cpu.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/flags.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mmx.Po@am__quote@
