--- a/src/gui/Makefile.in
+++ b/src/gui/Makefile.in
@@ -78,11 +78,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@C_MT32_TRUE@am__append_1 = -I$(top_srcdir)/src/mt32
-@C_MT32_TRUE@am__append_2 = \
-@C_MT32_TRUE@	midi_mt32.h
-
-@MACOSX_TRUE@am__append_3 = \
+@MACOSX_TRUE@am__append_1 = \
 @MACOSX_TRUE@	menu_osx.mm
 
 subdir = src/gui
@@ -110,17 +106,14 @@ am__libgui_a_SOURCES_DIST = sdlmain_linux.cpp sdlmain.cpp \
 	sdl_mapper.cpp dosbox_logo.h render.cpp render_scalers.cpp \
 	render_scalers.h render_templates.h render_loops.h \
 	render_simple.h render_templates_sai.h render_templates_hq.h \
-	render_templates_hq2x.h render_templates_hq3x.h midi.cpp \
-	midi_win32.h midi_oss.h midi_coreaudio.h midi_alsa.h \
-	midi_coremidi.h dosbox_splash.h menu.cpp bitop.cpp ptrop.cpp \
-	zipcrc.c zipfile.cpp midi_mt32.h menu_osx.mm
-am__objects_1 =
-@MACOSX_TRUE@am__objects_2 = menu_osx.$(OBJEXT)
+	render_templates_hq2x.h render_templates_hq3x.h \
+	dosbox_splash.h menu.cpp bitop.cpp ptrop.cpp zipcrc.c \
+	zipfile.cpp menu_osx.mm
+@MACOSX_TRUE@am__objects_1 = menu_osx.$(OBJEXT)
 am_libgui_a_OBJECTS = sdlmain_linux.$(OBJEXT) sdlmain.$(OBJEXT) \
 	sdl_mapper.$(OBJEXT) render.$(OBJEXT) render_scalers.$(OBJEXT) \
-	midi.$(OBJEXT) menu.$(OBJEXT) bitop.$(OBJEXT) ptrop.$(OBJEXT) \
-	zipcrc.$(OBJEXT) zipfile.$(OBJEXT) $(am__objects_1) \
-	$(am__objects_2)
+	menu.$(OBJEXT) bitop.$(OBJEXT) ptrop.$(OBJEXT) \
+	zipcrc.$(OBJEXT) zipfile.$(OBJEXT) $(am__objects_1)
 libgui_a_OBJECTS = $(am_libgui_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -318,17 +311,15 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter \
-	"-DRESDIR=\"$(resdir)\"" -I$(top_srcdir)/src $(am__append_1)
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter "-DRESDIR=\"$(resdir)\"" -I$(top_srcdir)/src
 noinst_LIBRARIES = libgui.a
 libgui_a_SOURCES = sdlmain_linux.cpp sdlmain.cpp sdl_mapper.cpp \
 	dosbox_logo.h render.cpp render_scalers.cpp render_scalers.h \
 	render_templates.h render_loops.h render_simple.h \
 	render_templates_sai.h render_templates_hq.h \
-	render_templates_hq2x.h render_templates_hq3x.h midi.cpp \
-	midi_win32.h midi_oss.h midi_coreaudio.h midi_alsa.h \
-	midi_coremidi.h dosbox_splash.h menu.cpp bitop.cpp ptrop.cpp \
-	zipcrc.c zipfile.cpp $(am__append_2) $(am__append_3)
+	render_templates_hq2x.h render_templates_hq3x.h \
+	dosbox_splash.h menu.cpp bitop.cpp ptrop.cpp zipcrc.c \
+	zipfile.cpp $(am__append_1)
 all: all-am
 
 .SUFFIXES:
@@ -381,7 +372,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bitop.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/menu.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/menu_osx.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/midi.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ptrop.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/render.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/render_scalers.Po@am__quote@
