--- a/src/hardware/Makefile.in
+++ b/src/hardware/Makefile.in
@@ -328,7 +328,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter -I$(top_srcdir)/src
-SUBDIRS = serialport parport reSID mame
+SUBDIRS = serialport reSID mame
 EXTRA_DIST = opl.cpp opl.h dbopl.h pci_devices.h voodoo_types.h voodoo_def.h voodoo_data.h \
              voodoo_interface.h voodoo_emu.h voodoo_vogl.h voodoo_opengl.h
 
