--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,10 +20,10 @@ endif
 
 dosbox_x_SOURCES = dosbox.cpp $(ico_stuff)
 dosbox_x_LDADD = debug/libdebug.a dos/libdos.a shell/libshell.a builtin/libbuiltin.a \
-               ints/libints.a misc/libmisc.a hardware/serialport/libserial.a \
+               ints/libints.a misc/libmisc.a \
                libs/porttalk/libporttalk.a gui/libgui.a hardware/libhardware.a \
-	       cpu/libcpu.a hardware/reSID/libresid.a fpu/libfpu.a gui/libgui.a \
-		   output/liboutput.a hardware/mame/libmame.a libs/zmbv/libzmbv.a
+	       cpu/libcpu.a fpu/libfpu.a gui/libgui.a \
+		   output/liboutput.a libs/zmbv/libzmbv.a
 
 if !EMSCRIPTEN
 dosbox_x_LDADD += aviwriter/libaviwriter.a
