--- a/src/hardware/Makefile.am
+++ b/src/hardware/Makefile.am
@@ -1,16 +1,16 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter -I$(top_srcdir)/src
 
-SUBDIRS = serialport reSID mame
+SUBDIRS = 
 
 EXTRA_DIST = opl.cpp opl.h dbopl.h pci_devices.h voodoo_types.h voodoo_def.h voodoo_data.h \
              voodoo_interface.h voodoo_emu.h voodoo_vogl.h voodoo_opengl.h
 
 noinst_LIBRARIES = libhardware.a
 
-libhardware_a_SOURCES = dma.cpp gameblaster.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
+libhardware_a_SOURCES = dma.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
                         memory.cpp mixer.cpp pcspeaker.cpp pci_bus.cpp pic.cpp timer.cpp \
 			vga.cpp vga_attr.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp vga_other.cpp \
 			vga_memory.cpp vga_misc.cpp vga_seq.cpp vga_xga.cpp vga_s3.cpp vga_tseng.cpp vga_paradise.cpp \
-			cmos.cpp ipx.cpp ipxserver.cpp ne2000.cpp innova.cpp dongle.cpp \
+			cmos.cpp \
 			voodoo.cpp voodoo_interface.cpp voodoo_emu.cpp ide.cpp floppy.cpp voodoo_vogl.cpp voodoo_opengl.cpp
 
