--- a/src/hardware/Makefile.in
+++ b/src/hardware/Makefile.in
@@ -99,20 +99,17 @@ am__v_AR_0 = @echo "  AR      " $@;
 am__v_AR_1 = 
 libhardware_a_AR = $(AR) $(ARFLAGS)
 libhardware_a_LIBADD =
-am_libhardware_a_OBJECTS = dma.$(OBJEXT) gameblaster.$(OBJEXT) \
-	hardware.$(OBJEXT) iohandler.$(OBJEXT) joystick.$(OBJEXT) \
-	keyboard.$(OBJEXT) memory.$(OBJEXT) mixer.$(OBJEXT) \
-	pcspeaker.$(OBJEXT) pci_bus.$(OBJEXT) pic.$(OBJEXT) \
-	timer.$(OBJEXT) vga.$(OBJEXT) vga_attr.$(OBJEXT) \
-	vga_crtc.$(OBJEXT) vga_dac.$(OBJEXT) vga_draw.$(OBJEXT) \
-	vga_gfx.$(OBJEXT) vga_other.$(OBJEXT) vga_memory.$(OBJEXT) \
-	vga_misc.$(OBJEXT) vga_seq.$(OBJEXT) vga_xga.$(OBJEXT) \
-	vga_s3.$(OBJEXT) vga_tseng.$(OBJEXT) vga_paradise.$(OBJEXT) \
-	cmos.$(OBJEXT) ipx.$(OBJEXT) ipxserver.$(OBJEXT) \
-	ne2000.$(OBJEXT) innova.$(OBJEXT) dongle.$(OBJEXT) \
-	voodoo.$(OBJEXT) voodoo_interface.$(OBJEXT) \
-	voodoo_emu.$(OBJEXT) ide.$(OBJEXT) floppy.$(OBJEXT) \
-	voodoo_vogl.$(OBJEXT) voodoo_opengl.$(OBJEXT)
+am_libhardware_a_OBJECTS = dma.$(OBJEXT) hardware.$(OBJEXT) \
+	iohandler.$(OBJEXT) joystick.$(OBJEXT) keyboard.$(OBJEXT) \
+	memory.$(OBJEXT) mixer.$(OBJEXT) pcspeaker.$(OBJEXT) \
+	pci_bus.$(OBJEXT) pic.$(OBJEXT) timer.$(OBJEXT) vga.$(OBJEXT) \
+	vga_attr.$(OBJEXT) vga_crtc.$(OBJEXT) vga_dac.$(OBJEXT) \
+	vga_draw.$(OBJEXT) vga_gfx.$(OBJEXT) vga_other.$(OBJEXT) \
+	vga_memory.$(OBJEXT) vga_misc.$(OBJEXT) vga_seq.$(OBJEXT) \
+	vga_xga.$(OBJEXT) vga_s3.$(OBJEXT) vga_tseng.$(OBJEXT) \
+	vga_paradise.$(OBJEXT) cmos.$(OBJEXT) voodoo.$(OBJEXT) \
+	voodoo_interface.$(OBJEXT) voodoo_emu.$(OBJEXT) ide.$(OBJEXT) \
+	floppy.$(OBJEXT) voodoo_vogl.$(OBJEXT) voodoo_opengl.$(OBJEXT)
 libhardware_a_OBJECTS = $(am_libhardware_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -328,16 +325,16 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter -I$(top_srcdir)/src
-SUBDIRS = serialport reSID mame
+SUBDIRS = 
 EXTRA_DIST = opl.cpp opl.h dbopl.h pci_devices.h voodoo_types.h voodoo_def.h voodoo_data.h \
              voodoo_interface.h voodoo_emu.h voodoo_vogl.h voodoo_opengl.h
 
 noinst_LIBRARIES = libhardware.a
-libhardware_a_SOURCES = dma.cpp gameblaster.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
+libhardware_a_SOURCES = dma.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
                         memory.cpp mixer.cpp pcspeaker.cpp pci_bus.cpp pic.cpp timer.cpp \
 			vga.cpp vga_attr.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp vga_other.cpp \
 			vga_memory.cpp vga_misc.cpp vga_seq.cpp vga_xga.cpp vga_s3.cpp vga_tseng.cpp vga_paradise.cpp \
-			cmos.cpp ipx.cpp ipxserver.cpp ne2000.cpp innova.cpp dongle.cpp \
+			cmos.cpp \
 			voodoo.cpp voodoo_interface.cpp voodoo_emu.cpp ide.cpp floppy.cpp voodoo_vogl.cpp voodoo_opengl.cpp
 
 all: all-recursive
@@ -391,20 +388,14 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmos.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dma.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dongle.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/floppy.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameblaster.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hardware.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ide.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/innova.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/iohandler.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ipx.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ipxserver.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/joystick.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/keyboard.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memory.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mixer.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ne2000.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pci_bus.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pcspeaker.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pic.Po@am__quote@
