--- a/src/hardware/Makefile.am
+++ b/src/hardware/Makefile.am
@@ -7,7 +7,7 @@ EXTRA_DIST = pci_devices.h
 noinst_LIBRARIES = libhardware.a
 
 libhardware_a_SOURCES = dma.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
-                        memory.cpp mixer.cpp pcspeaker.cpp pci_bus.cpp pic.cpp timer.cpp \
+                        memory.cpp mixer.cpp pci_bus.cpp pic.cpp timer.cpp \
 			vga.cpp vga_attr.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp vga_other.cpp \
 			vga_memory.cpp vga_misc.cpp vga_seq.cpp vga_xga.cpp vga_s3.cpp vga_tseng.cpp vga_paradise.cpp \
 			cmos.cpp
