--- a/src/hardware/Makefile.in
+++ b/src/hardware/Makefile.in
@@ -101,13 +101,13 @@ libhardware_a_AR = $(AR) $(ARFLAGS)
 libhardware_a_LIBADD =
 am_libhardware_a_OBJECTS = dma.$(OBJEXT) hardware.$(OBJEXT) \
 	iohandler.$(OBJEXT) joystick.$(OBJEXT) keyboard.$(OBJEXT) \
-	memory.$(OBJEXT) mixer.$(OBJEXT) pcspeaker.$(OBJEXT) \
-	pci_bus.$(OBJEXT) pic.$(OBJEXT) timer.$(OBJEXT) vga.$(OBJEXT) \
-	vga_attr.$(OBJEXT) vga_crtc.$(OBJEXT) vga_dac.$(OBJEXT) \
-	vga_draw.$(OBJEXT) vga_gfx.$(OBJEXT) vga_other.$(OBJEXT) \
-	vga_memory.$(OBJEXT) vga_misc.$(OBJEXT) vga_seq.$(OBJEXT) \
-	vga_xga.$(OBJEXT) vga_s3.$(OBJEXT) vga_tseng.$(OBJEXT) \
-	vga_paradise.$(OBJEXT) cmos.$(OBJEXT)
+	memory.$(OBJEXT) mixer.$(OBJEXT) pci_bus.$(OBJEXT) \
+	pic.$(OBJEXT) timer.$(OBJEXT) vga.$(OBJEXT) vga_attr.$(OBJEXT) \
+	vga_crtc.$(OBJEXT) vga_dac.$(OBJEXT) vga_draw.$(OBJEXT) \
+	vga_gfx.$(OBJEXT) vga_other.$(OBJEXT) vga_memory.$(OBJEXT) \
+	vga_misc.$(OBJEXT) vga_seq.$(OBJEXT) vga_xga.$(OBJEXT) \
+	vga_s3.$(OBJEXT) vga_tseng.$(OBJEXT) vga_paradise.$(OBJEXT) \
+	cmos.$(OBJEXT)
 libhardware_a_OBJECTS = $(am_libhardware_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -327,7 +327,7 @@ SUBDIRS =
 EXTRA_DIST = pci_devices.h
 noinst_LIBRARIES = libhardware.a
 libhardware_a_SOURCES = dma.cpp hardware.cpp iohandler.cpp joystick.cpp keyboard.cpp \
-                        memory.cpp mixer.cpp pcspeaker.cpp pci_bus.cpp pic.cpp timer.cpp \
+                        memory.cpp mixer.cpp pci_bus.cpp pic.cpp timer.cpp \
 			vga.cpp vga_attr.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp vga_other.cpp \
 			vga_memory.cpp vga_misc.cpp vga_seq.cpp vga_xga.cpp vga_s3.cpp vga_tseng.cpp vga_paradise.cpp \
 			cmos.cpp
@@ -390,7 +390,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memory.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mixer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pci_bus.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pcspeaker.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pic.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vga.Po@am__quote@
