--- a/src/ints/Makefile.in
+++ b/src/ints/Makefile.in
@@ -102,10 +102,10 @@ libints_a_LIBADD =
 am_libints_a_OBJECTS = xms.$(OBJEXT) ems.$(OBJEXT) int10.$(OBJEXT) \
 	int10_char.$(OBJEXT) int10_memory.$(OBJEXT) \
 	int10_misc.$(OBJEXT) int10_modes.$(OBJEXT) int10_pal.$(OBJEXT) \
-	int10_put_pixel.$(OBJEXT) int10_video_state.$(OBJEXT) \
-	int10_vptable.$(OBJEXT) bios.$(OBJEXT) bios_disk.$(OBJEXT) \
-	bios_vhd.$(OBJEXT) bios_keyboard.$(OBJEXT) \
-	qcow2_disk.$(OBJEXT) bios_memdisk.$(OBJEXT)
+	int10_video_state.$(OBJEXT) int10_vptable.$(OBJEXT) \
+	bios.$(OBJEXT) bios_disk.$(OBJEXT) bios_vhd.$(OBJEXT) \
+	bios_keyboard.$(OBJEXT) qcow2_disk.$(OBJEXT) \
+	bios_memdisk.$(OBJEXT)
 libints_a_OBJECTS = $(am_libints_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -294,7 +294,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LIBRARIES = libints.a
 libints_a_SOURCES = xms.cpp xms.h ems.cpp \
                     int10.cpp int10.h int10_char.cpp int10_memory.cpp int10_misc.cpp int10_modes.cpp \
-                    int10_pal.cpp int10_put_pixel.cpp int10_video_state.cpp int10_vptable.cpp \
+                    int10_pal.cpp int10_video_state.cpp int10_vptable.cpp \
                     bios.cpp bios_disk.cpp bios_vhd.cpp bios_keyboard.cpp qcow2_disk.cpp bios_memdisk.cpp
 
 all: all-am
@@ -358,7 +358,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_misc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_modes.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_pal.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_put_pixel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_video_state.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_vptable.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/qcow2_disk.Po@am__quote@
